2009-07-15  Miloslav Trmač  <mitr@redhat.com>

	* doc/demo.py (do_save): Fix passphrase generation.

2009-06-30  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.2.
	* NEWS: Update.
	* po/LINGUAS: Update.
	* Makefile.am (lib_libvolume_key_la_LDFLAGS): Update version info.

2009-06-15  Miloslav Trmač  <mitr@redhat.com>

	* src/volume_key.c (yes_or_no, read_batch_string, generic_ui_cb): Use
	getline () and getdelim ().
	(pos_init): Use a more specific error message.

	* python/volume_key.i
	(struct libvk_volume::create_packet_assymetric_from_cert_data): New
	method.
	* po/POTFILES.in: Add python/volume_key.i.
	* doc/demo.py (PacketOutputState.__init__)
	(PacketOutputState.write_packet): Add assymetric encryption.

	* lib/libvolume_key.c (libvk_volume_create_packet_cleartext)
	(libvk_volume_create_packet_assymetric)
	(libvk_volume_create_packet_with_passphrase)
	(libvk_packet_get_format)
	* lib/volume_luks.c (luks_parse_escrow_packet): Use G_STATIC_ASSERT.

	* doc/demo.py (PacketOutputState.__init__): Fix failure counter.
	(PacketOutputState.__init__, PacketOutputState.write_packet): Add
	assymetric encryption.

2009-06-14  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Add AC_CONFIG_MACRO_DIR.  Update for libtool 2.

	* Makefile.am (AM_CPPFLAGS): Remove the G_* macros again,
	G_DISABLE_DEPRECATED is already defined by configure.ac.

	* Makefile.am (AM_CPPFLAGS): Define G_DISABLE_DEPRECATED and
	G_DISABLE_SINGLE_INCLUDES.

2009-06-05  Miloslav Trmač  <mitr@redhat.com>

	* python/volume_key.i (python_generic_cb, python_passphrase_cb): Remove
	obsolete FIXME.

	* po/cs.po: Update Czech translation.

	* python/volume_key.i: New file.
	* doc/demo.py: New file.
	* configure.ac: Add AM_PATH_PYTHON.
	* Makefile.am (PYTHON_CPPFLAGS): New setting.
	(pyexec_PYTHON, pyexec_LTLIBRARIES): New targets.  Associated rules
	and dependency data added as well.

	* Makefile.as (lib_libvolume_key_la_LDFLAGS)